--- a/site/en/guide/gpu.ipynb
+++ b/site/en/guide/gpu.ipynb
@@ -261,12 +261,12 @@
         }
       ],
       "source": [
-        "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+        "gpus = tf.config.list_physical_devices('GPU')\n",
         "if gpus:\n",
         "  # Restrict TensorFlow to only use the first GPU\n",
         "  try:\n",
-        "    tf.config.experimental.set_visible_devices(gpus[0], 'GPU')\n",
-        "    logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+        "    tf.config.set_visible_devices(gpus[0], 'GPU')\n",
+        "    logical_gpus = tf.config.list_logical_devices('GPU')\n",
         "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPU\")\n",
         "  except RuntimeError as e:\n",
         "    # Visible devices must be set before GPUs have been initialized\n",
@@ -281,7 +281,7 @@
       "source": [
         "In some cases it is desirable for the process to only allocate a subset of the available memory, or to only grow the memory usage as is needed by the process. TensorFlow provides two methods to control this.\n",
         "\n",
-        "The first option is to turn on memory growth by calling `tf.config.experimental.set_memory_growth`, which attempts to allocate only as much GPU memory as needed for the runtime allocations: it starts out allocating very little memory, and as the program gets run and more GPU memory is needed, we extend the GPU memory region allocated to the TensorFlow process. Note we do not release memory, since it can lead to memory fragmentation. To turn on memory growth for a specific GPU, use the following code prior to allocating any tensors or executing any ops."
+        "The first option is to turn on memory growth by calling `tf.config.set_memory_growth`, which attempts to allocate only as much GPU memory as needed for the runtime allocations: it starts out allocating very little memory, and as the program gets run and more GPU memory is needed, we extend the GPU memory region allocated to the TensorFlow process. Note we do not release memory, since it can lead to memory fragmentation. To turn on memory growth for a specific GPU, use the following code prior to allocating any tensors or executing any ops."
       ]
     },
     {
@@ -300,13 +300,13 @@
         }
       ],
       "source": [
-        "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+        "gpus = tf.config.list_physical_devices('GPU')\n",
         "if gpus:\n",
         "  try:\n",
         "    # Currently, memory growth needs to be the same across GPUs\n",
         "    for gpu in gpus:\n",
-        "      tf.config.experimental.set_memory_growth(gpu, True)\n",
-        "    logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+        "      tf.config.set_memory_growth(gpu, True)\n",
+        "    logical_gpus = tf.config.list_logical_devices('GPU')\n",
         "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
         "  except RuntimeError as e:\n",
         "    # Memory growth must be set before GPUs have been initialized\n",
@@ -321,7 +321,7 @@
       "source": [
         "Another way to enable this option is to set the environmental variable `TF_FORCE_GPU_ALLOW_GROWTH` to `true`. This configuration is platform specific.\n",
         "\n",
-        "The second method is to configure a virtual GPU device with `tf.config.experimental.set_virtual_device_configuration` and set a hard limit on the total memory to allocate on the GPU."
+        "The second method is to configure a virtual GPU device with `tf.config.set_virtual_device_configuration` and set a hard limit on the total memory to allocate on the GPU."
       ]
     },
     {
@@ -340,14 +340,14 @@
         }
       ],
       "source": [
-        "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+        "gpus = tf.config.list_physical_devices('GPU')\n",
         "if gpus:\n",
         "  # Restrict TensorFlow to only allocate 1GB of memory on the first GPU\n",
         "  try:\n",
-        "    tf.config.experimental.set_virtual_device_configuration(\n",
+        "    tf.config.set_virtual_device_configuration(\n",
         "        gpus[0],\n",
-        "        [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=1024)])\n",
-        "    logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+        "        [tf.config.VirtualDeviceConfiguration(memory_limit=1024)])\n",
+        "    logical_gpus = tf.config.list_logical_devices('GPU')\n",
         "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
         "  except RuntimeError as e:\n",
         "    # Virtual devices must be set before GPUs have been initialized\n",
@@ -472,14 +472,14 @@
         }
       ],
       "source": [
-        "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+        "gpus = tf.config.list_physical_devices('GPU')\n",
         "if gpus:\n",
         "  # Create 2 virtual GPUs with 1GB memory each\n",
         "  try:\n",
-        "    tf.config.experimental.set_virtual_device_configuration(\n",
+        "    tf.config.set_virtual_device_configuration(\n",
         "        gpus[0],\n",
-        "        [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=1024),\n",
-        "         tf.config.experimental.VirtualDeviceConfiguration(memory_limit=1024)])\n",
+        "        [tf.config.VirtualDeviceConfiguration(memory_limit=1024),\n",
+        "         tf.config.VirtualDeviceConfiguration(memory_limit=1024)])\n",
         "    logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
         "    print(len(gpus), \"Physical GPU,\", len(logical_gpus), \"Logical GPUs\")\n",
         "  except RuntimeError as e:\n",
@@ -599,7 +599,7 @@
       "source": [
         "tf.debugging.set_log_device_placement(True)\n",
         "\n",
-        "gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+        "gpus = tf.config.list_logical_devices('GPU')\n",
         "if gpus:\n",
         "  # Replicate your computation on multiple GPUs\n",
         "  c = []\n",
